--- a/GitTutorial/WebContent/HelloWorld.html
+++ b/GitTutorial/WebContent/HelloWorld.html
@@ -5,8 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-Hello World
-1st revision
-2nd revision
+Hello World<br>
+1st revision<br>
+2nd revision<br>
+3rd revision<br>
 </body>
 </html>
